use moko-resources